--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,19 @@
   "name": "Client Success App",
   "icons": [
     {
-      "src": "../src/assets/images/logo.png",
+      "src": "/logo.png",
       "sizes": "64x64 32x32",
       "type": "image/x-icon"
+    },
+    {
+      "src": "/logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
