--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "cookie": "^0.6.0",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
